--- a/.env.production
+++ b/.env.production
@@ -6,4 +6,5 @@ DATABASE_PASSWORD=!@c20160426
 DATABASE_NAME=bbs_pro
 SESSION_COOKIE_NAME=sid
 SESSION_PASSWORD=4WJq5NCK
-PORT=3001
+SERVICE_HOST=127.0.0.1
+SERVICE_PORT=8000
